--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     ports:
       - 7000:80
     volumes:
+      - ./nginx/.htpasswd:/etc/apache2/.htpasswd:ro
       - ./nginx/templates:/etc/nginx/templates:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     environment:
