--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -1,5 +1,7 @@
 server {
     server_name ${STAGING_HOST};
+    auth_basic "Restricted Area";
+    auth_basic_user_file /etc/apache2/.htpasswd;
     location / {
         proxy_pass http://host.docker.internal:${STAGING_HTTP_PORT};
     }
