--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -1,3 +1,16 @@
+proxy_redirect          off;
+proxy_set_header        Host $host;
+proxy_set_header        X-Real-IP $remote_addr;
+proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header        X-Forwarded-Proto $scheme;
+
+proxy_connect_timeout   90;
+proxy_send_timeout      90;
+proxy_read_timeout      90;
+proxy_buffer_size       128k;
+proxy_buffers           4 256k;
+proxy_busy_buffers_size 256k;
+
 server {
     server_name ${STAGING_HOST};
     auth_basic "Restricted Area";
