--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
+# Certbot setup inspired by
+# https://github.com/wmnnd/nginx-certbot/blob/master/docker-compose.yml
+# and
+# https://pentacent.medium.com/nginx-and-lets-encrypt-with-docker-in-less-than-5-minutes-b4b8a60d3a71
+# See also
+# https://certbot.eff.org/docs/install.html#running-with-docker
+
 version: '3.3'
 
 services:
   reverse_proxy: # https://hub.docker.com/_/nginx
     restart: always
     image: nginx:1.19.9-alpine
-    command: [
-      "nginx",
-      "-g", "daemon off;"
-      ]
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     ports:
       - 7000:80
       - 7001:443
@@ -15,6 +19,8 @@ services:
       - ./nginx/.htpasswd:/etc/apache2/.htpasswd:ro
       - ./nginx/templates:/etc/nginx/templates:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     environment:
       - PRODUCTION_HTTP_PORT=${PRODUCTION_HTTP_PORT}
       - PRODUCTION_HOST=${PRODUCTION_HOST}
@@ -23,3 +29,11 @@ services:
       - STAGING_HOST=${STAGING_HOST}
     extra_hosts:
       - host.docker.internal:host-gateway
+
+  certbot:
+    restart: always
+    image: certbot/certbot:v1.16.0
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
