--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,11 @@ services:
   reverse_proxy: # https://hub.docker.com/_/nginx
     restart: always
     image: nginx:1.19.9-alpine
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: [
+      "nginx",
+      "-g", "daemon off;"
+      ]
+    # command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     ports:
       - 7000:80
       - 7001:443
@@ -19,8 +23,8 @@ services:
       - ./nginx/.htpasswd:/etc/apache2/.htpasswd:ro
       - ./nginx/templates:/etc/nginx/templates:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
     environment:
       - PRODUCTION_HTTP_PORT=${PRODUCTION_HTTP_PORT}
       - PRODUCTION_HOST=${PRODUCTION_HOST}
