Enable OCSP stapling, see for example https://www.digicert.com/kb/ssl-support/nginx-enable-ocsp-stapling-on-server.htm or https://blog.cloudflare.com/high-reliability-ocsp-stapling/ or https://community.letsencrypt.org/t/will-does-the-letsencrypt-client-create-a-cert-chain-usable-with-ocsp-stapling/2072/18

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -13,6 +13,10 @@ proxy_busy_buffers_size 256k;
 
 ssl_certificate /etc/letsencrypt/live/buildingenvelopedata.org/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/buildingenvelopedata.org/privkey.pem;
+
+ssl_stapling on;
+ssl_stapling_verify on;
+
 include /etc/letsencrypt/options-ssl-nginx.conf;
 ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
