Disable `/email` route in production environment (the email service `smtp4dev` is only used in development and staging)

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -72,6 +72,10 @@ server {
     location / {
         proxy_pass http://host.docker.internal:${PRODUCTION_HTTP_PORT};
     }
+
+    location /email {
+        return 404;
+    }
 }
 
 # For the redirection from non-www to www see
