--- a/local.yml
+++ b/local.yml
@@ -80,14 +80,16 @@
       cron:
         name: database-backup
         weekday: '0'
-        job: 'cd /app/production && mkdir --parents /app/data/backups && make --file Makefile.production DUMP_FILE=/app/data/backups/dump_$(date +"%Y-%m-%d_%H_%M_%S").gz backup'
+        # For the preferred way to redirect stdout and stderr to log files used below see https://tldp.org/LDP/abs/html/io-redirection.html
+        job: '{ cd /app/production && mkdir --parents /app/data/backups && make --file Makefile.production DUMP_FILE=/app/data/backups/dump_$(date +"%Y-%m-%d_%H_%M_%S").gz backup ; } >> /app/production/database-backup.log 2>&1'
 
     - name: Renew Transport Layer Security (TLS) certificates needed for the `S` in `HTTPS`
       cron:
         name: tls-renewal
         special_time: daily
         # TODO Deploy only when renewal took actually place by using certbot's `--deploy-hook` to run `make deploy`.
-        job: 'cd /app/machine && make renew-certificates && make deploy'
+        # For the preferred way to redirect stdout and stderr to log files used below see https://tldp.org/LDP/abs/html/io-redirection.html
+        job: '{ cd /app/machine && make renew-certificates && make deploy ; } >> /app/machine/tls-renewal.log 2>&1'
 
     - name: Docker
       # Inspired by https://ops.tips/blog/docker-ansible-role/
