Run database backup cron job daily and keep only the most recent 7 backups

--- a/local.yml
+++ b/local.yml
@@ -79,9 +79,9 @@
     - name: Backup database
       cron:
         name: database-backup
-        weekday: '0'
+        special_time: daily
         # For the preferred way to redirect stdout and stderr to log files used below see https://tldp.org/LDP/abs/html/io-redirection.html
-        job: '{ cd /app/production && mkdir --parents /app/data/backups && make --file Makefile.production DUMP_FILE=/app/data/backups/dump_$(date +"%Y-%m-%d_%H_%M_%S").gz backup ; } > /app/production/database-backup.log 2>&1'
+        job: '{ cd /app/production && mkdir --parents /app/data/backups && make --file Makefile.production DUMP_FILE=/app/data/backups/dump_$(date +"%Y-%m-%d_%H_%M_%S").gz backup && make --file Makefile.production prune-backups ; } > /app/production/database-backup.log 2>&1'
 
     - name: Renew Transport Layer Security (TLS) certificates needed for the `S` in `HTTPS`
       cron:
