--- a/local.yml
+++ b/local.yml
@@ -81,7 +81,7 @@
         name: database-backup
         special_time: daily
         # For the preferred way to redirect stdout and stderr to log files used below see https://tldp.org/LDP/abs/html/io-redirection.html
-        job: '{ cd /app/production && mkdir --parents /app/data/backups && make --file Makefile.production DUMP_FILE=/app/data/backups/dump_$(date +"%Y-%m-%d_%H_%M_%S").gz backup && make --file Makefile.production prune-backups ; } > /app/production/database-backup.log 2>&1'
+        job: '{ PATH=/usr/local/bin/:/usr/bin:${PATH} && cd /app/production && mkdir --parents /app/data/backups && make --file Makefile.production DUMP_FILE=/app/data/backups/dump_$(date +"%Y-%m-%d_%H_%M_%S").gz backup && make --file Makefile.production prune-backups ; } > /app/production/database-backup.log 2>&1'
 
     - name: Renew Transport Layer Security (TLS) certificates needed for the `S` in `HTTPS`
       cron:
@@ -89,7 +89,7 @@
         special_time: daily
         # TODO Deploy only when renewal took actually place by using certbot's `--deploy-hook` to run `make deploy`.
         # For the preferred way to redirect stdout and stderr to log files used below see https://tldp.org/LDP/abs/html/io-redirection.html
-        job: '{ cd /app/machine && make renew-certificates && make deploy ; } > /app/machine/tls-renewal.log 2>&1'
+        job: '{ PATH=/usr/local/bin/:/usr/bin:${PATH} && cd /app/machine && make renew-certificates && make deploy ; } > /app/machine/tls-renewal.log 2>&1'
 
     - name: Docker
       # Inspired by https://ops.tips/blog/docker-ansible-role/
@@ -154,7 +154,7 @@
             name: docker-prune
             minute: '0'
             hour: '*/2'
-            job: docker system prune --force --filter "until=24h"
+            job: '{ PATH=/usr/local/bin/:/usr/bin:${PATH} && docker system prune --force --filter "until=24h" ; } > /app/machine/docker-prune.log 2>&1'
 
         - name: Flush handlers
           meta: flush_handlers
