Hard-code IP address instead of using `host-gateway` (because the later returned in an entry in `/etc/hosts` with IP address literally `<nil>` After upgrading Docker to version 20.10.8 and docker-compose to version 1.29.0; the issue where using `host-gateway` is suggested is https://github.com/docker/for-linux/issues/264 and the IP address is the one given by the command `ip a` for `docker0`)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - STAGING_HTTP_PORT=${STAGING_HTTP_PORT}
       - STAGING_HOST=${STAGING_HOST}
     extra_hosts:
-      - host.docker.internal:host-gateway
+      - host.docker.internal:172.17.0.1
 
   certbot: # https://hub.docker.com/r/certbot/certbot
     restart: always
