--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -11,8 +11,8 @@ proxy_buffer_size       128k;
 proxy_buffers           4 256k;
 proxy_busy_buffers_size 256k;
 
-ssl_certificate /etc/letsencrypt/live/buildingenvelopedata.org/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/buildingenvelopedata.org/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/privkey.pem;
 
 ssl_stapling on;
 ssl_stapling_verify on;
