--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -11,6 +11,8 @@ proxy_buffer_size       128k;
 proxy_buffers           4 256k;
 proxy_busy_buffers_size 256k;
 
+client_max_body_size    0;
+
 ssl_certificate /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/privkey.pem;
 
