--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       "nginx",
       "-g", "daemon off;"
       ]
+    healthcheck:
+      test: ["CMD-SHELL", "service nginx status || exit 1"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
     ports:
       - 7000:80
       - 7001:443
