--- a/local.yml
+++ b/local.yml
@@ -42,6 +42,32 @@
             insertbefore: BOF
             create: yes
 
+    - name: Upgrades
+      block:
+        # Inspired by https://wiki.debian.org/UnattendedUpgrades
+        # and https://askubuntu.com/questions/1305955/ansible-dpkg-reconfigure-plow-unattended-upgrades-stopped-while-running/1323117#1323117
+        - name: Install `unattended-upgrades`
+          become: yes
+          package:
+            name: unattended-upgrades
+            state: present
+
+        - name: Install `apt-listchanges`
+          become: yes
+          package:
+            name: apt-listchanges
+            state: present
+
+        - name: Configure Debian to auto install security updates
+          become: yes
+          debconf: name=unattended-upgrades question=unattended-upgrades/enable_auto_updates vtype=boolean value='true'
+
+        - name: Activate unattended upgrades
+          become: yes
+          command:
+            cmd: dpkg-reconfigure --force noninteractive unattended-upgrades
+            creates: /etc/apt/apt.conf.d/20auto-upgrades
+
     - name: Install GNU Make
       become: yes
       package:
