--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ NON_WWW_PRODUCTION_HOST=buildingenvelopedata.org
 
 STAGING_HTTP_PORT=9000
 STAGING_HOST=staging.buildingenvelopedata.org
+
+EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
