--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -83,6 +83,9 @@ server {
 # For the redirection from non-www to www see
 # http://nginx.org/en/docs/http/converting_rewrite_rules.html
 server {
+    listen *:80;
+    listen *:443 ssl;
     server_name ${NON_WWW_PRODUCTION_HOST};
-    return 301 $scheme://${PRODUCTION_HOST}$request_uri;
+    server_tokens off;
+    return 301 https://${PRODUCTION_HOST}$request_uri;
 }
