Prune docker system daily (instead of every second hour)

--- a/local.yml
+++ b/local.yml
@@ -185,8 +185,7 @@
           # See https://docs.docker.com/config/pruning/#prune-everything
           cron:
             name: docker-prune
-            minute: '0'
-            hour: '*/2'
+            special_time: daily
             job: '{ PATH=/usr/local/bin/:/usr/bin:${PATH} && docker system prune --force --filter "until=24h" ; } > /app/machine/docker-prune.log 2>&1'
 
         - name: Flush handlers
