Make Cron send emails on errors instead of writing to log files

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ STAGING_HTTP_PORT=9000
 STAGING_HOST=staging.buildingenvelopedata.org
 
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
+SMTP_HOST=mail-mtaKA26.fraunhofer.de
+SMTP_PORT=25
