--- a/local.yml
+++ b/local.yml
@@ -28,6 +28,10 @@
         state: present
 
   tasks:
+    - name: Configure locale
+      become: yes
+      command: localectl set-locale LANG=en_US.UTF-8 LANGUAGE=en_US.UTF-8 LC_ALL=en_US.UTF-8
+
     - name: Bash completion
       block:
         - name: Install Bash completion
