Use non-partial host (the variable $HOST just resolves to to the partial name metabase or database which is the output of the command `hostname`)

--- a/local.yml
+++ b/local.yml
@@ -258,6 +258,7 @@
     - name: Monitor system with Monit
       # https://mmonit.com/monit/
       vars:
+        host: '{{ lookup("env", "NON_WWW_PRODUCTION_HOST") }}'
         email_address: '{{ lookup("env", "EMAIL_ADDRESS") }}'
         smtp_host: '{{ lookup("env", "SMTP_HOST") }}'
         smtp_port: '{{ lookup("env", "SMTP_PORT") }}'
