--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,8 @@ NON_WWW_PRODUCTION_HOST=buildingenvelopedata.org
 STAGING_HTTP_PORT=9000
 STAGING_HOST=staging.buildingenvelopedata.org
 
+FRAUNHOFER_HOST=192-102-163-92.vm.c.fraunhofer.de
+
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
 SMTP_HOST=mail-mtaKA26.fraunhofer.de
 SMTP_PORT=25
