Make HTTP(S) ports configurable via .env-file

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
+HTTP_PORT=7000
+HTTPS_PORT=7001
+
 PRODUCTION_HTTP_PORT=8000
 PRODUCTION_HOST=www.buildingenvelopedata.org
 NON_WWW_PRODUCTION_HOST=buildingenvelopedata.org
