--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       timeout: 30s
       retries: 3
     ports:
-      - 7000:80
-      - 7001:443
+      - ${HTTP_PORT}:80
+      - ${HTTPS_PORT}:443
     volumes:
       - ./nginx/.htpasswd:/etc/apache2/.htpasswd:ro
       - ./nginx/templates:/etc/nginx/templates:ro
