--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@
 services:
   reverse_proxy: # https://hub.docker.com/_/nginx
     restart: always
-    image: nginx:1.25-bookworm
+    image: nginx:1.27-bookworm
     command: [
       "nginx",
       "-g", "daemon off;"
@@ -38,7 +38,8 @@ services:
 
   certbot: # https://hub.docker.com/r/certbot/certbot
     restart: always
-    image: certbot/certbot:v2.8.0
+    image: certbot/certbot:v3.1.0
     volumes:
       - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/letsencrypt:/var/lib/letsencrypt
       - ./certbot/www:/var/www/certbot
