--- a/local.yml
+++ b/local.yml
@@ -259,7 +259,9 @@
     - name: Monitor system with Monit
       # https://mmonit.com/monit/
       vars:
-        host: '{{ lookup("env", "NON_WWW_PRODUCTION_HOST") }}'
+        host: '{{ lookup("env", "PRODUCTION_HOST") }}'
+        non_www_host: '{{ lookup("env", "NON_WWW_PRODUCTION_HOST") }}'
+        staging_host: '{{ lookup("env", "PRODUCTION_HOST") }}'
         email_address: '{{ lookup("env", "EMAIL_ADDRESS") }}'
         smtp_host: '{{ lookup("env", "SMTP_HOST") }}'
         smtp_port: '{{ lookup("env", "SMTP_PORT") }}'
