Check the network interface

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,5 @@ FRAUNHOFER_HOST=192-102-163-92.vm.c.fraunhofer.de
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
 SMTP_HOST=mail-mtaKA26.fraunhofer.de
 SMTP_PORT=25
+
+NETWORK_INTERFACE=ens160
