--- a/.env.sample
+++ b/.env.sample
@@ -2,16 +2,16 @@ HTTP_PORT=7000
 HTTPS_PORT=7001
 
 PRODUCTION_HTTP_PORT=8000
-PRODUCTION_HOST=www.buildingenvelopedata.org
-NON_WWW_PRODUCTION_HOST=buildingenvelopedata.org
+PRODUCTION_HOST=www.sample.org
+NON_WWW_PRODUCTION_HOST=sample.org
 
 STAGING_HTTP_PORT=9000
-STAGING_HOST=staging.buildingenvelopedata.org
+STAGING_HOST=staging.sample.org
 
 FRAUNHOFER_HOST=192-102-163-92.vm.c.fraunhofer.de
 
-EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
-SMTP_HOST=mail-mtaKA26.fraunhofer.de
+EMAIL_ADDRESS=john.doe@sample.org
+SMTP_HOST=mail.sample.org
 SMTP_PORT=25
 
 NETWORK_INTERFACE=ens160
