--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -16,7 +16,7 @@ client_max_body_size    0;
 ssl_certificate /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/privkey.pem;
 
-ssl_stapling on;
+ssl_stapling off;
 ssl_stapling_verify on;
 
 include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -67,6 +67,8 @@ server {
     }
 
     location /monit {
+        auth_basic "Restricted Area";
+        auth_basic_user_file /etc/apache2/.htpasswd;
         proxy_pass http://host.docker.internal:2812;
     }
 
@@ -108,6 +110,7 @@ server {
     }
 
     location /.well-known/acme-challenge/ {
+        auth_basic "off";
         root /var/www/certbot;
     }
 }
